# cookiecutter-python

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  cookiecutter.json  pyproject.toml
.github/workflows/: ubuntu-jammy.yml
hooks/: post_gen_project.py
tests/: helper.py  test_bake_cli.py  test_bake_cython.py  test_bake_gui.py  test_bake_licenses.py  test_bake_project.py  test_bake_pyinstaller.py  test_bake_readme.py  test_bake_template.py  utils.py
{{cookiecutter.project_slug}}/: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE.BSD-3-Clause  LICENSE.MIT  Makefile  README.md  build.cmd  pyproject.toml  setup.py  tox.ini  {{cookiecutter.project_slug}}-cli.spec  {{cookiecutter.project_slug}}-gui.spec  {{cookiecutter.project_slug}}.spec
{{cookiecutter.project_slug}}/.github/workflows/: ubuntu-jammy.yml  ubuntu-latest.yml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_package}}/: __cli__.py  __gui__.py  __init__.py  __main__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_package}}/cli/: app.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_package}}/gui/: app.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_package}}/gui/frames/: main_frame.py
{{cookiecutter.project_slug}}/tests/: conftest.py  test_cli.py
