[tool.poetry]
name = "cookiecutter-python"
version = "0.1.0"
description = "A Cookiecutter template for Python projects."
authors = ["Garrett HE <garrett.he@outlook.com>"]
license = "BSD-3-Clause"
readme = "README.md"
homepage = "https://github.com/garrett-he/cookiecutter-python"
repository = "https://github.com/garrett-he/cookiecutter-python.git"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
chance = "^0.110"
pre-commit = "^4.0.1"
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-cookies = "^0.7.0"

[tool.pytest.ini_options]
addopts = "--ignore='{{cookiecutter.project_slug}}'"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
