[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license_id }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_path }}"
repository = "https://github.com/{{ cookiecutter.github_path }}.git"
keywords = ["{{ cookiecutter.project_keywords.split(',')|join('", "') }}"]
packages = [{ include = "{{ cookiecutter.project_package }}", from = "src" }]
classifiers = []

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
{% if cookiecutter.with_cli == 'yes' %}
click = "^8.1.7"
{% endif %}


[tool.poetry.group.dev.dependencies]
chance = "^0.110"
{% if cookiecutter.with_cython == 'yes' %}
cython = "^3.0.11"
{% endif %}
pre-commit = "^4.0.1"
{% if cookiecutter.with_pyinstaller == 'yes' %}
pyinstaller = "^6.10.0"
{% endif %}
pylint = "^3.3.1"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
tox = "^4.21.2"

{% if cookiecutter.with_cli == 'yes' %}
[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_package}}.__main__:main"
{% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
