[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license_id }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_path }}"
repository = "https://github.com/{{ cookiecutter.github_path }}.git"
keywords = ["{{ cookiecutter.project_keywords.split(',')|join('", "') }}"]
classifiers = []

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
tox = "^4.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
