[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.project_version }}"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
license = "{{ cookiecutter.license_id }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_path }}"
repository = "https://github.com/{{ cookiecutter.github_path }}.git"
keywords = ["{{ cookiecutter.project_keywords.split(',')|join('", "') }}"]
packages = [{ include = "{{ cookiecutter.project_package }}", from = "src" }]
classifiers = []

[tool.poetry.dependencies]
python = "{{ cookiecutter.python_version }}"
{% if cookiecutter.with_click == 'yes' %}
click = "^8.1.5"
{% endif %}

[tool.poetry.group.dev.dependencies]
chance = "^0.110"
pre-commit = "^3.3.3"
{% if cookiecutter.with_pyinstaller == 'yes' %}
pyinstaller = "^5.13.0"
{% endif %}
pylint = "^2.17.4"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
tox = "^4.6.4"

{% if cookiecutter.with_click == 'yes' %}
[tool.poetry.scripts]
{{cookiecutter.project_slug}} = "{{cookiecutter.project_package}}.__main__:cli"
{% endif %}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
